# ae-2016

./: .gitignore  Iterative_alpha_runningtime.cpp  README.md  matrixmult.cpp
MatrixMult/: CMakeLists.txt  implementation-test-recmult.sh  main.cpp  plots-parallel.sh  plots-recmult-extended.sh  plots.sh  quality-test-recmult.sh  quality-test-simplemult.sh  run-parallel.sh  run-recmult-extended.sh  run-recmult.sh  run-simplemult.sh  run-tiledmult.sh  run.sh
MatrixMult/Shared/: Utils.h
MatrixMult/data/: recmult.data  simplemult.data  tiledmult.data
MatrixMult/data-recmult-extended/: recmult_0.data  recmult_16.data  recmult_32.data  recmult_40.data  recmult_50.data  recmult_64.data  recmult_8.data  recmult_80.data
MatrixMult/methods/: imatrixmult.h  recmult.h  recmult_parallel.h  simplemult.h  tiledmult.h
MatrixMult/plots/: branch_mispredictions.eps  l1_cache_misses.eps  l2_cache_misses.eps  running_time.eps
MatrixMult/plots-recmult-extended/: l1_cache_misses.eps  l2_cache_misses.eps  recmult_extended_running_time.eps
PriorityQueues/: CMakeLists.txt  IPriorityQueue.h  Makefile  PriorityQueue.h  PriorityQueues  _main.cpp  main.cpp  plots-knheap.sh  plots.sh  plots.sh~  run-all-random.sh  run-all-random.sh~  run-all.sh  run-all.sh~  run-sanders-heap4.sh  run-sanders-knheap.sh  run-sanders-simple.sh  run-simple.sh
PriorityQueues/Sanders/: heap-CLR.h  heap4.h  knheap.C  knheap.h
PriorityQueues/Shared/: Measure.h  Utils.h
PriorityQueues/Simple/: SimplePriorityQueue.cpp  SimplePriorityQueue.h  VectorHeap.h
PriorityQueues/data/: priority_queue_running_time.eps  (+12 more)
(+260 files in other folders)
